# agent-switch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/agent-switch-cli/: Cargo.toml  build.rs
crates/agent-switch-cli/src/: main.rs
crates/agent-switch-cli/tests/: cli.rs
crates/agent-switch-core/: Cargo.toml
crates/agent-switch-core/src/: config.rs  diagnostics.rs  fs.rs  init.rs  lib.rs  manifest.rs  mcp.rs  migrate.rs  setup.rs  sync.rs  tool.rs  validator.rs
crates/agent-switch-core/src/formats/: codex.rs  copilot.rs  markdown.rs  mod.rs  opencode.rs
crates/agent-switch-core/src/sync/: context.rs  event.rs  plan.rs  report.rs  stage.rs
crates/agent-switch-core/src/sync/stages/: export.rs  import.rs  links.rs  merge.rs  mod.rs  remove_stale.rs
crates/agent-switch-core/tests/: formats.rs  migrate.rs  setup.rs  sync.rs
crates/agentstitch-cli/: Cargo.toml
crates/agentstitch-cli/src/: main.rs
crates/agentstitch-core/: Cargo.toml
crates/agentstitch-core/src/: config.rs  diagnostics.rs  fs.rs  init.rs  manifest.rs  mcp.rs  setup.rs  sync.rs
crates/agentstitch-core/src/formats/: copilot.rs  markdown.rs
crates/agentstitch-core/tests/: setup.rs  sync.rs
docs/: architecture.md  canonical-files.md  cli-usage.md
