[workspace]
members = ["crates/agent-switch-cli", "crates/agent-switch-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
agent-switch-core = { path = "crates/agent-switch-core" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
sha2 = "0.10"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
thiserror = "2"
toml_edit = { version = "0.23", features = ["serde"] }
walkdir = "2"
