[package]
name = "agent-switch-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ags"
path = "src/main.rs"

[dependencies]
agent-switch-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true

[build-dependencies]
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
