[package]
name = "agent-switch-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
pathdiff.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
